--- a/research/index.html
+++ b/research/index.html
@@ -50,7 +50,7 @@ title: Research
 <details>
   <summary>Details</summary>
  <ul>
-		 <li><i>A survey of the literature on epidemiological models on how social interactions drive belief and expectations in economics.</i></li>
+		 <li><i>A survey of the literature on epidemiological models of how social interactions drive belief and expectations in economics.</i></li>
 	   </ul> 
 </details>
 
