--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+	<li><a href="https://www.sciencedirect.com/science/article/pii/B9780128229279000343">Handbook of Economic Expectations Available Online</a></li> 
 	<li><a href="https://sndeecon.org">Scheduled presentation at the SNDE-2022 Symposium for Young Researchers</a></li>
 	<li><a href="https://editorialexpress.com/conference/MMMfall22/program/MMMfall22.html">Scheduled presentation at the Midwest Macro</a></li>
 	<li><a href="https://www.esabologna2022.com">Presented at the University of Bologna</a></li>
@@ -39,11 +40,11 @@ title: Tao Wang's page
 	<li><a href="https://www.aeaweb.org/conference/2022/preliminary/1271?q=eNqrVipOLS7OzM8LqSxIVbKqhnGVrJQMlWp1lBKLi_OTgRwlHaWS1KJcXAgrJbESKpSZmwphlWWmloO0FxUUXDAFTA1AegsS00GyRkq1XDBuoh4V",style="color:#3498db"> Co-organing the upcoming AEA session "Expectations, Beliefs and Behaviors during the Pandemic" </a></li>
 	<li><a href="/presentation/HANK_SAM_Discussion.pdf">A discussion of HANK-SAM paper by Morten O. Ravn and Vincent Sterk (2019)</a></li>
 	<li><a href="/papers/InfVar.pdf" >An updated draft of the inflation uncertainty paper</a></li>
-	<li><a href="https://sites.google.com/view/phd-evs2020/past-presentations?authuser=0">Presentation at the PhD-EVS</a></li>
-	<li><a href="/presentation/ConsumptionNLPermanentIncome_Discussion.pdf">A discussion of non-homothetic preference in life-cycle by Ludwig Straub(2019)</a></li>
-
+	
 	<details>
   <summary>More</summary>
+	<li><a href="https://sites.google.com/view/phd-evs2020/past-presentations?authuser=0">Presentation at the PhD-EVS</a></li>
+	<li><a href="/presentation/ConsumptionNLPermanentIncome_Discussion.pdf">A discussion of non-homothetic preference in life-cycle by Ludwig Straub(2019)</a></li>
 
 	<li><a href="/papers/Makridis,Wang - Learning from Friends.pdf">A revised draft of the "friends and consumption" with a model of learning from social network</a></li>
 	<li><a href="/papers/Makridis,Wang%20-%20Learning%20from%20Friends.pdf">New working paper on how social network affected consumption responses in the pandemic</a></li>
