--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
-	<li><a href="https://www.sciencedirect.com/science/article/pii/B9780128229279000343">Handbook of Economic Expectations Available Online</a></li> 
+	<li><a href="https://www.sciencedirect.com/science/article/pii/B9780128229279000343"><em>Handbook of Economic Expectations</em> available online</a></li> 
 	<li><a href="https://sndeecon.org">Scheduled presentation at the SNDE-2022 Symposium for Young Researchers</a></li>
 	<li><a href="https://editorialexpress.com/conference/MMMfall22/program/MMMfall22.html">Scheduled presentation at the Midwest Macro</a></li>
 	<li><a href="https://www.esabologna2022.com">Presented at the University of Bologna</a></li>
