--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+	<li><a>Scheduled presentation at IAAE annual conference (Oslo), Asian Meeting of the Econometric Society (Virtual), and EEA-ESEM (Barcelona).</a></li> 
 	<li><a href="https://sndeecon.org/filer/dokumentarkiv/10032023_2023_snde_progam_031023.pdf">Presented at the SNDE Symposium</a></li> 
 	<li><a href="https://www.sciencedirect.com/science/article/pii/B9780128229279000343"><em>Handbook of Economic Expectations</em> available online</a></li> 
 	<li><a href="https://sndeecon.org">Scheduled presentation at the SNDE-2022 Symposium for Young Researchers</a></li>
@@ -41,10 +42,10 @@ title: Tao Wang's page
 	<li><a href="https://www.aeaweb.org/conference/2022/preliminary/1271?q=eNqrVipOLS7OzM8LqSxIVbKqhnGVrJQMlWp1lBKLi_OTgRwlHaWS1KJcXAgrJbESKpSZmwphlWWmloO0FxUUXDAFTA1AegsS00GyRkq1XDBuoh4V",style="color:#3498db"> Co-organing the upcoming AEA session "Expectations, Beliefs and Behaviors during the Pandemic" </a></li>
 	<li><a href="/presentation/HANK_SAM_Discussion.pdf">A discussion of HANK-SAM paper by Morten O. Ravn and Vincent Sterk (2019)</a></li>
 	<details>
+  <summary>More</summary>
 
 	<li><a href="/papers/InfVar.pdf" >An updated draft of the inflation uncertainty paper</a></li>
 	
-  <summary>More</summary>
 	<li><a href="https://sites.google.com/view/phd-evs2020/past-presentations?authuser=0">Presentation at the PhD-EVS</a></li>
 	<li><a href="/presentation/ConsumptionNLPermanentIncome_Discussion.pdf">A discussion of non-homothetic preference in life-cycle by Ludwig Straub(2019)</a></li>
 
