--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Tao Wang's page
 	</ul>
 	<h3 style="color:#CD5C5C"> Contact information </h3>
 	  <ul>
-	 <li>Email: twang80@jhu.edu and taowangeconomics@gmail.com</li>
+	 <li>Email: taowangeconomics@gmail.com</li>
 	 </ul> 	
   </div>
  
