--- a/bib/InfVar.html
+++ b/bib/InfVar.html
@@ -1,6 +1,6 @@
 
 @article{wang2022infvar, 
 	author = {Wang, Tao}, 
-	title = {How Do Agents Form Inflation Expectations? Evidence from the Forecast Uncertainty}, 
+	title = {How Do Agents Form Macroeconomic Expectations? Evidence from Inflation Uncertainty}, 
 	year = {2022}, 
-	journal={Unpublished paper, Johns Hopkins University} }
+	journal={Unpublished paper} }
