--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tao Wang's page
     <img src="img/professional_photo.JPG" alt="Profile photo" width="250" height="350" style="float:right">
   </div>
   <div class="column">
-    <p2>I recently got Ph.D. in economics from <a href="https://econ.jhu.edu/" style = "color: #3498db;">Johns Hopkins University,</a> and joined Bank of Canada as a senior economist.</p2> 
+    <p2>I recently got Ph.D. in economics from Johns Hopkins University and joined Bank of Canada as a senior economist.</p2> 
 	<h3 style="color:#CD5C5C"> Research interest</h3>
 	<ul>
 	<li>Expectation/belief formation and its macro implications </li>
