--- a/research/index.html
+++ b/research/index.html
@@ -61,7 +61,7 @@ title: Research
          <hr size="1" width="100%" color="gray">  
 
   <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i></h4>
-   <h5>(with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a> and William Du)</h5>
+   <h5>(with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, William Du and Adrian Monninger)</h5>
 
 
          <h4 style="color:black"><i>Experienced Volatility, Subjective Attribution, and Perceived Income Risks</i></h4>
