--- a/reading/index.html
+++ b/reading/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Reading group/discussion slides
 ---
 	<h2 style="color:#CD5C5C">{{ page.title }}</h2>
+     <li><a href =/presentation/FreshStart.pdf>Consumer Bankruptcy, Livshits, MacGee, and Tertilt (2007)<a/></li>
 	<li><a href =/presentation/ImperfectSolverDiscussion.pdf>Economic decisions with costly deliberation, Cosmin Ilut and Rosen Valchev (2023)<a/></li>
 	<li><a href =/presentation/BusinessNewsStructure_Discussion.pdf>Topic modeling with business news, Leland Bybee, et al. (2021)<a/></li>
 	<li><a href =/presentation/ConsumptionNLPermanentIncome_Discussion.pdf>Non-homethetic preference over life-cycle, Ludwig Straub (2019)<a/></li>
