--- a/research/index.html
+++ b/research/index.html
@@ -44,6 +44,16 @@ title: Research
 </details>         
 
           
+  <h4 style="color:black"><i>Uncovering Subjective Models from Survey Expectations</i><a href="../papers/SubjectiveModels.pdf" style="color:blue">[Working Paper]</a></h4>   
+<details>
+  <summary>Details</summary>
+ <ul>
+		  <li><i>Households with higher inflation expectations also expect higher unemployment rates. </i></li>
+	 	  <li><i>The association between two expectations are unlikely driven by common signals, but by subjective models.</i></li>
+	 <li><i>Inflation rates and news have effects on expectations across domains but unemployment news don't have such effects.</i></li>
+	</ul> 
+</details>         
+
 <h3 style="color:#CD5C5C">Publication</h3>
 
 	     <hr size="1" width="100%" color="gray">  
