--- a/research/index.html
+++ b/research/index.html
@@ -45,6 +45,7 @@ title: Research
 
           
   <h4 style="color:black"><i>Uncovering Subjective Models from Survey Expectations</i><a href="../papers/SubjectiveModels.pdf" style="color:blue">[Working Paper]</a></h4>   
+ <h5>(with <a href="https://sevhou.github.io/" style="color:gray">Chenyu (Sev) Hou/a>)</h5>
 <details>
   <summary>Details</summary>
  <ul>
