--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+	<li><a href="https://taowangecon.github.io/papers/SubjectiveModels.pdf">A new working paper on subjective macroeconomic models </a></li> 
+	<li><a href="https://taowangecon.github.io/presentation/FreshStart.pdf">Reading group presentation on consumer bankruptcy </a></li> 
 	<li><a href="https://www.aeaweb.org/conference/2024/preliminary/1929?q=eNqrVipOLS7OzM8LqSxIVbKqhnGVrJQMlWp1lBKLi_OTgRwjIyUdpZLUolxcIBvISkmshDBKMnNTIayyzNRykAFFBQVAAVMDkO6CxHSQLJANXDCiUh53">Scheduled presentation at ASSA (2024) (San Antonio, Texas) </a></li> 
 	<li><a>Scheduled presentation at IAAE annual conference (Oslo), Asian Meeting of the Econometric Society (Virtual), and EEA-ESEM (Barcelona).</a></li> 
 	<li><a href="https://sndeecon.org/filer/dokumentarkiv/10032023_2023_snde_progam_031023.pdf">Presented at the SNDE Symposium</a></li> 
