--- a/bib/PIR.html
+++ b/bib/PIR.html
@@ -1,4 +1,4 @@
-@article{wang2022perceived, 
+@techreport{wang2022perceived, 
 	author = {Wang, Tao}, 
 	title = {Perceived versus calibrated income risks in heterogeneous-agent consumption models}, 
 year = {2022}, 
