--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+	<li><a href="https://taowangecon.github.io/presentation/EpiExpSocial.pdf">A presentation on Epidemiological Expectations at University of Ottawa </a></li> 
+
 	<li><a href="https://taowangecon.github.io/papers/SubjectiveModels.pdf">A new working paper on subjective macroeconomic models </a></li> 
 	<li><a href="https://taowangecon.github.io/presentation/FreshStart.pdf">Reading group presentation on consumer bankruptcy </a></li> 
 	<li><a href="https://www.aeaweb.org/conference/2024/preliminary/1929?q=eNqrVipOLS7OzM8LqSxIVbKqhnGVrJQMlWp1lBKLi_OTgRwjIyUdpZLUolxcIBvISkmshDBKMnNTIayyzNRykAFFBQVAAVMDkO6CxHSQLJANXDCiUh53">Scheduled presentation at ASSA (2024) (San Antonio, Texas) </a></li> 
