--- a/research/index.html
+++ b/research/index.html
@@ -44,14 +44,14 @@ title: Research
 </details>         
 
           
-  <h4 style="color:black"><i>Uncovering Subjective Models from Survey Expectations</i><a href="../papers/SubjectiveModels.pdf" style="color:blue">[Working Paper]</a></h4>   
+  <h4 style="color:black"><i>Uncovering Subjective Models from Survey Expectations</i><a href="../papers/SubjectiveModels.pdf" style="color:blue">[Working Paper]</a><a href="../presentation/SubjectiveModelSlides.pdf" style="color:blue">[Slides]</a></h4>   
  <h5>(with <a href="https://sevhou.github.io/" style="color:gray">Chenyu (Sev) Hou</a>)</h5>
 <details>
   <summary>Details</summary>
  <ul>
 		  <li><i>Households with higher inflation expectations also expect higher unemployment rates. </i></li>
-	 	  <li><i>The association between two expectations are unlikely driven by common signals, but by subjective models.</i></li>
-	 <li><i>Inflation rates and news have effects on expectations across domains but unemployment news don't have such effects.</i></li>
+	 	  <li><i>The association between two expectations is unlikely driven by common signals, but by subjective models.</i></li>
+	 <li><i>Inflation rates and news have effects on expectations across domains but unemployment news doesn't have such effects.</i></li>
 	</ul> 
 </details>         
 
