--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Tao Wang's page
     <img src="img/professional_photo.JPG" alt="Profile photo" width="250" height="350" style="float:right">
   </div>
   <div class="column">
-    <p2>I am currently a senior economist at Bank of Canada.</p2> 
+    <p2>I am currently a senior economist at the Bank of Canada.</p2> 
 	<h3 style="color:#CD5C5C"> Research interest</h3>
 	<ul>
 	<li>Expectation/belief formation and its macro implications </li>
