--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+	<li><a>Scheduled presentation at NASMES (Nashville) and IAAE 2024 (Thessaloniki)</a></li>
 	<li><a>Scheduled presentation at T2M (Amsterdam) and SED 2024 (Barcelona)</a></li>
 	<li><a href="https://taowangecon.github.io/presentation/EpiExpSocial.pdf">A presentation on Epidemiological Expectations at University of Ottawa </a></li> 
 
