--- a/bib/InfVar.html
+++ b/bib/InfVar.html
@@ -1,6 +1,6 @@
-
-@article{wang2022infvar, 
-	author = {Wang, Tao}, 
-	title = {How Do Agents Form Macroeconomic Expectations? Evidence from Inflation Uncertainty}, 
-	year = {2022}, 
-	journal={Unpublished paper} }
+@techreport{wang2024agents,
+  title={How do agents form macroeconomic expectations? Evidence from inflation uncertainty},
+  author={Wang, Tao},
+  year={2024},
+  institution={Bank of Canada Staff Working Paper}
+}
