--- a/research/index.html
+++ b/research/index.html
@@ -54,6 +54,7 @@ title: Research
   <summary>Details</summary>
  <ul>
 		 <li><i>A survey of the literature on epidemiological models of how social interactions drive belief and expectations in economics.</i></li>
+	 	 <li><i><a href="https://taowangecon.github.io/presentation/EpiExpSocial.pdf">See a recent presentation on Epidemiological Expectations </a></i></li>
 	   </ul> 
 </details>
 
