--- a/research/index.html
+++ b/research/index.html
@@ -54,7 +54,7 @@ title: Research
   <summary>Details</summary>
  <ul>
 		 <li><i>A survey of the literature on epidemiological models of how social interactions drive belief and expectations in economics.</i></li>
-	 	 <li><i><a href="https://taowangecon.github.io/presentation/EpiExpSocial.pdf">See a recent presentation on Epidemiological Expectations </a></i></li>
+	 	 <li><i>See a recent <a href="https://taowangecon.github.io/presentation/EpiExpSocial.pdf">presentation </a> on this topic</i></li>
 	   </ul> 
 </details>
 
