--- a/research/index.html
+++ b/research/index.html
@@ -60,13 +60,13 @@ title: Research
 
        
                  <h4 style="color:black"><i>Learning from Friends in a Pandemic: Social Networks and the Macroeconomic Response of Consumption</i><a href="/papers/Makridis,Wang - Learning from Friends.pdf" style="color:blue">[Working Paper]</a><a href="/presentation/FriendsPandemicSlidesShort.pdf" style="color:blue">[Slides]</a><a href="https://github.com/iworld1991/FriendsPandemicEmpirics" style="color:blue">[GitHub]</a><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3601500" style="color:blue">[SSRN]</a><a href="https://voxeu.org/article/social-networks-and-consumption-patterns-during-pandemic" style="color:blue">[VoxEU]</a><a href="../bib/FriendsPandemic.html" style="color:blue">[Bib]</a></h4>
-                 <h5>(European Economic Review) (with <a href="http://www.christosmakridis.com" style="color:gray">Christos Makridis</a>)</h5>
+                 <h5>(<a href="https://www.sciencedirect.com/science/article/pii/S001429212400165X?dgcid=coauthor">European Economic Review </a>) (with <a href="http://www.christosmakridis.com" style="color:gray">Christos Makridis</a>)</h5>
 
    <details>
   <summary>Details</summary>
 <ul>
 		 <li><i>Evidence for social network as a potential propagation mechanism of aggregate consumption response to the pandemic. </i></li>
-		 <li><i>Counties more socially connected to regions hardly hit by the pandemic saw bigger drop in consumption. </i></li>
+		 <li><i>Counties more socially connected to regions hardly hit by the pandemic saw a bigger drop in consumption. </i></li>
 		 <li><i>Consumption categories relied upon social contact saw the biggest responses. </i></li>
          </ul> 
 </details>   	
@@ -77,7 +77,7 @@ title: Research
   <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i></h4>
    (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, William Du and Adrian Monninger)
 
- <h4 style="color:black"><i>Perceived Delilnquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
+ <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
 
  <h4 style="color:black"><i>Partisan Split in Macro and Micro Expectations</i></h4>
    (with Adrian Monninger and Kyung Woong Koh)
