--- a/research/index.html
+++ b/research/index.html
@@ -75,7 +75,7 @@ title: Research
          <hr size="1" width="100%" color="gray">  
 
   <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i></h4>
-   (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, William Du and Adrian Monninger)
+   (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and Adrian Monninger)
 
  <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
 
