--- a/research/index.html
+++ b/research/index.html
@@ -32,7 +32,7 @@ title: Research
 </details>         
 
           
-  <h4 style="color:black"><i>Uncovering Subjective Models from Survey Expectations</i><a href="../papers/SubjectiveModels.pdf" style="color:blue">[Working Paper]</a><a href="../presentation/SubjectiveModelSlides.pdf" style="color:blue">[Slides]</a></h4>   
+  <h4 style="color:black"><i>Uncovering Subjective Models from Survey Expectations</i><a href="../papers/SubjectiveModels.pdf" style="color:blue">[Working Paper]</a><a href="../presentation/SubjectiveModelSlides.pdf" style="color:blue">[Slides]</a><a href="../bib/SubjectiveModel.html" style="color:blue">[Bib]</a></h4>   
  <h5>(with <a href="https://sevhou.github.io/" style="color:gray">Chenyu (Sev) Hou</a>)</h5>
 <details>
   <summary>Details</summary>
