--- a/research/index.html
+++ b/research/index.html
@@ -74,7 +74,7 @@ title: Research
  <h3 style="color:#CD5C5C">Work in progress</h3>
          <hr size="1" width="100%" color="gray">  
 
-  <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i></h4>
+  <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i><a href="../bib/PURML.html" style="color:blue">[Bib]</a></h4>
    (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and Adrian Monninger)
 
  <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
