--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+	<li><a href="https://taowangecon.github.io/papers/PURML.pdf">A new working paper on perceived unemployment risks (comments welcomed!)</a></li>
 	<li><a href="https://www.sciencedirect.com/science/article/pii/S001429212400165X?dgcid=coauthor">Publication of the social network paper in the European Economic Review </a></li>
 	<li><a>Scheduled presentation at NASMES (Nashville) and IAAE 2024 (Thessaloniki)</a></li>
 	<li><a>Scheduled presentation at T2M (Amsterdam) and SED 2024 (Barcelona)</a></li>
 	<li><a href="https://taowangecon.github.io/presentation/EpiExpSocial.pdf">A presentation on Epidemiological Expectations at University of Ottawa </a></li> 
 
 	<li><a href="https://taowangecon.github.io/papers/SubjectiveModels.pdf">A new working paper on subjective macroeconomic models </a></li> 
-	<li><a href="https://taowangecon.github.io/presentation/FreshStart.pdf">Reading group presentation on consumer bankruptcy </a></li> 
-	<details>
+<details>
 <summary>More</summary>
+	<li><a href="https://taowangecon.github.io/presentation/FreshStart.pdf">Reading group presentation on consumer bankruptcy </a></li> 
 	<li><a href="https://www.aeaweb.org/conference/2024/preliminary/1929?q=eNqrVipOLS7OzM8LqSxIVbKqhnGVrJQMlWp1lBKLi_OTgRwjIyUdpZLUolxcIBvISkmshDBKMnNTIayyzNRykAFFBQVAAVMDkO6CxHSQLJANXDCiUh53">Scheduled presentation at ASSA (2024) (San Antonio, Texas) </a></li> 
 	<li><a>Scheduled presentation at IAAE annual conference (Oslo), Asian Meeting of the Econometric Society (Virtual), and EEA-ESEM (Barcelona).</a></li> 
 	<li><a href="https://sndeecon.org/filer/dokumentarkiv/10032023_2023_snde_progam_031023.pdf">Presented at the SNDE Symposium</a></li> 
