--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
-	<li><a href="https://taowangecon.github.io/papers/PURML.pdf">A new working paper on perceived unemployment risks (comments welcomed!)</a></li>
+	<li><a href="https://taowangecon.github.io/papers/PURML.pdf">A new paper draft on perceived unemployment risks (comments welcomed!)</a></li>
 	<li><a href="https://www.sciencedirect.com/science/article/pii/S001429212400165X?dgcid=coauthor">Publication of the social network paper in the European Economic Review </a></li>
 	<details>
 <summary>More</summary>
