--- a/research/index.html
+++ b/research/index.html
@@ -82,6 +82,9 @@ title: Research
  <h4 style="color:black"><i>Partisan Split in Macro and Micro Expectations</i></h4>
    (with Adrian Monninger and Kyung Woong Koh)
 
+ <h4 style="color:black"><i>Consumption Spending before and after Unemployment</i></h4>
+   (with Michael Boutros and Nathanael Vellekoop)
+
          <h4 style="color:black"><i>Experienced Volatility, Subjective Attribution, and Perceived Income Risks</i></h4>
 
 
