--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@ title: Programs and notebook
 <details>
   <summary>Details</summary>
 <ul>
-		 <li><i>Consumption, saving and portfolio choice decisions over finite life horizon with stochatic income shocks</i></li>
+		 <li><i>Consumption, saving and portfolio choice decisions over finite life horizon with stochastic income shocks</i></li>
 	        <li><i>Detailed tutorial on differences between value-function iteration, policy function iteration, and other numerical methods used <a href="https://llorracc.github.io/SolvingMicroDSOPs/"></i></li>
 		   <li><i>Replication of Chris Carroll's <a href="https://llorracc.github.io/SolvingMicroDSOPs/">lecture notes</a></i></li>
          </ul> 
@@ -16,11 +16,11 @@ title: Programs and notebook
 </details>   	
 
 
-                 <h4 style="color:black"><i>Estimation of permanent/transitory income process</i><a href="https://github.com/iworld1991/PIR/blob/master/WorkingFolder/PythonCode/IncomeProcess.ipynb" style="color:blue">[Jupyter Notebook]</a></h4>
+                 <h4 style="color:black"><i>Estimation of permanent/transitory income process</i><a href="https://github.com/iworld1991/IncomeProecess/blob/main/WorkingFolder/PythonCode/IncomeProcess.ipynb" style="color:blue">[Jupyter Notebook]</a></h4>
 <details>
   <summary>Details</summary>
 <ul>
-		 <li><i>Simulation and parameter estimation of a commonly used income process cotaining a permanent and a transitory (possibly serially correlated) component</i></li>
+		 <li><i>Simulation and parameter estimation of a commonly used income process containing a permanent and a transitory (possibly serially correlated) component</i></li>
          </ul> 
 
 </details>   	
