--- a/research/index.html
+++ b/research/index.html
@@ -77,10 +77,10 @@ title: Research
   <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i><a href="../papers/PURML.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PURML.html" style="color:blue">[Bib]</a></h4>
    (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and Adrian Monninger)
 
- <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
-
- <h4 style="color:black"><i>Partisan Split in Macro and Micro Expectations</i></h4>
+ <h4 style="color:black"><i>Partisan Split in Macro and Micro Expectations</i><a href="../bib/PB.html" style="color:blue">[Bib]</a></h4>
    (with Adrian Monninger and Kyung Woong Koh)
+
+ <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
 
  <h4 style="color:black"><i>Consumption Spending before and after Unemployment</i></h4>
    (with Michael Boutros and Nathanael Vellekoop)
