--- a/bib/PB.html
+++ b/bib/PB.html
@@ -1,5 +1,5 @@
 
-@techreport{2024pur,
+@techreport{seeing2024,
   title={Seeing the Economy through Colored Glasses: Partisanship in Macro and (not in) Micro Expectations},
   author={Koh, Kyung Woong and Monninger, Adrian and Wang, Tao},
   year={2025},
