--- a/bib/PIR.html
+++ b/bib/PIR.html
@@ -1,6 +1,8 @@
-@techreport{wang2022perceived, 
-	author = {Wang, Tao}, 
-	title = {Perceived versus calibrated income risks in heterogeneous-agent consumption models}, 
-year = {2022}, 
-journal={Unpublished paper, Johns Hopkins University} 
+
+@techreport{wang2023perceived,
+  title={Perceived versus calibrated income risks in heterogeneous-agent consumption models},
+  author={Wang, Tao},
+  year={2023},
+  institution={Bank of Canada}
 }
+
