--- a/research/index.html
+++ b/research/index.html
@@ -80,6 +80,11 @@ title: Research
  <h4 style="color:black"><i>Seeing the Economy through Colored Glasses: Partisanship in Macro and (not in) Micro Expectations</i><a href="../bib/PB.html" style="color:blue">[Bib]</a></h4>
    (with Adrian Monninger and Kyung Woong Koh)
 
+ <h4 style="color:black"><i>Reading between Lines: Measuring Macroeconomic Narratives from Texts using Large Language Models </i><a href="../bib/NarrativeLLM.html" style="color:blue">[Bib]</a></h4>
+   (with <a href="https://sevhou.github.io/" style="color:gray">Chenyu (Sev) Hou</a> and Jiannan (Jay) Jiang)
+
+
+
  <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
 
  <h4 style="color:black"><i>Consumption Spending before and after Unemployment</i></h4>
