--- a/research/index.html
+++ b/research/index.html
@@ -85,7 +85,7 @@ title: Research
 
 
 
- <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes: A Tale of Two Countries</i></h4>
+ <h4 style="color:black"><i>Perceived Delinquency Risks and Realized Outcomes</i></h4>
 
  <h4 style="color:black"><i>Consumption Spending before and after Unemployment</i></h4>
    (with Michael Boutros and Nathanael Vellekoop)
