--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
-	<li><a>Scheduled presentations at T2M at CREST and SED Copenhagen 2025</a></li>
+	<li><a>Scheduled presentations at 2025 T2M, SED and ESWC</a></li>
 	<li><a href="https://www.bundesbank.de/resource/blob/953472/7a9e3a32763d38dbada5f9fa75e59bea/472B63F073F071307366337C94F8C870/2025-04-24-eltville-programme-data.pdf">Scheduled presentation at Spring Conference on Expectations of Households and Firms at Bundesbank</a></li>
 
 	<li><a href="https://taowangecon.github.io/papers/PURML.pdf">A new paper draft on perceived unemployment risks (comments are welcome!)</a></li>
