--- a/research/index.html
+++ b/research/index.html
@@ -77,7 +77,7 @@ title: Research
   <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i><a href="../papers/PURML.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PURML.html" style="color:blue">[Bib]</a></h4>
    (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and Adrian Monninger)
 
- <h4 style="color:black"><i>Seeing the Economy through Colored Glasses: Partisanship in Macro and (not in) Micro Expectations</i><a href="../papers/PoliticalBeliefs.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PB.html" style="color:blue">[Bib]</a></h4>
+ <h4 style="color:black"><i>Seeing the Economy through Colored Glasses: Partisanship in Macro and (not in) Micro Expectations</i><a href="../papers/PoliticalBelief.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PB.html" style="color:blue">[Bib]</a></h4>
    (with Adrian Monninger and Kyung Woong Koh)
 
  <h4 style="color:black"><i>Reading between Lines: Measuring Macroeconomic Narratives from Texts using Large Language Models </i><a href="../bib/NarrativeLLM.html" style="color:blue">[Bib]</a></h4>
