--- a/research/index.html
+++ b/research/index.html
@@ -78,7 +78,7 @@ title: Research
    (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and Adrian Monninger)
 
  <h4 style="color:black"><i>Seeing the Economy through Colored Glasses: Partisanship in Macro and (not in) Micro Expectations</i><a href="../papers/PoliticalBelief.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PB.html" style="color:blue">[Bib]</a></h4>
-   (with Adrian Monninger and Kyung Woong Koh)
+   (with Adrian Monninger and <a href="https://sites.google.com/view/kyungwoongkoh/home" style="color:gray">Kyung Woong Koh</a>)
 
  <h4 style="color:black"><i>Reading between Lines: Measuring Macroeconomic Narratives from Texts using Large Language Models </i><a href="../bib/NarrativeLLM.html" style="color:blue">[Bib]</a></h4>
    (with <a href="https://sevhou.github.io/" style="color:gray">Chenyu (Sev) Hou</a> and Jiannan (Jay) Jiang)
