--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+		<li><a href="https://www.nber.org/conferences/si-2025-behavioral-macro">Scheduled talk at NBER SI </a></li> 
 	<li><a href="https://taowangecon.github.io/papers/SubjectiveModels.pdf">A revised paper on subjective macroeconomic models </a></li> 
 
 	<li><a>Scheduled presentations at 2025 <a href="https://www.t2m.network/2025/program/">T2M</a>, <a href="https://editorialexpress.com/conference/SED2025/program/SED2025.html">SED</a> and ESWC</a></li> 
