--- a/research/index.html
+++ b/research/index.html
@@ -75,10 +75,10 @@ title: Research
          <hr size="1" width="100%" color="gray">  
 
   <h4 style="color:black"><i>Perceived Unemployment Risks over Business Cycles</i><a href="../papers/PURML.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PURML.html" style="color:blue">[Bib]</a></h4>
-   (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and Adrian Monninger)
+   (with <a href="https://www.xinchengqiu.com" style="color:gray">Xincheng Qiu</a>, <a href="https://sites.google.com/view/williamdu/home" style="color:gray">William Du</a> and  <a href="https://sites.google.com/view/adrianmonninger" style="color:gray">Adrian Monninger </a>)
 
  <h4 style="color:black"><i>Seeing the Economy through Colored Glasses: Partisanship in Macro and (not in) Micro Expectations</i><a href="../papers/PoliticalBelief.pdf" style="color:blue">[Working Paper]</a><a href="../bib/PB.html" style="color:blue">[Bib]</a></h4>
-   (with Adrian Monninger and <a href="https://sites.google.com/view/kyungwoongkoh/home" style="color:gray">Kyung Woong Koh</a>)
+   (with <a href="https://sites.google.com/view/adrianmonninger" style="color:gray">Adrian Monninger </a> and <a href="https://sites.google.com/view/kyungwoongkoh/home" style="color:gray">Kyung Woong Koh</a>)
 
  <h4 style="color:black"><i>Reading between Lines: Measuring Macroeconomic Narratives from Texts using Large Language Models </i><a href="../bib/NarrativeLLM.html" style="color:blue">[Bib]</a></h4>
    (with <a href="https://sevhou.github.io/" style="color:gray">Chenyu (Sev) Hou</a> and Jiannan (Jay) Jiang)
