--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
-		<li><a href="https://taowangecon.github.io/papers/PoliticalBelief.pdf">A new preliminary draft on revisiting partisan divides in MICRO expectations</a></li> 
+		<li><a href="https://taowangecon.github.io/papers/PoliticalBelief.pdf">A new draft on partisan divides in MICRO expectations</a></li> 
 
 		<li><a href="https://www.nber.org/conferences/si-2025-behavioral-macro">Scheduled talk at NBER SI </a></li> 
 	<li><a href="https://taowangecon.github.io/papers/SubjectiveModels.pdf">A revised paper on subjective macroeconomic models </a></li> 
