--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title: Tao Wang's page
     <p2>I am currently a senior economist at the Bank of Canada.</p2> 
 	<h3 style="color:#CD5C5C"> Research interest</h3>
 	<ul>
-	<li>Expectation/belief formation and its macro implications </li>
-	<li>Behavioral and heterogeneous-agent macro </li>
+	<li>Behavioral macro: expectation/belief formation and its macro implications </li>
+	<li>Heterogeneous-agent and incomplete-market macro </li>
 	<li>Micro data for macro questions </li>
 	<li>Open-source computational economics with Python </li>
 	</ul>
