--- a/research/index.html
+++ b/research/index.html
@@ -16,15 +16,15 @@ title: Research
  <details>
   <summary>Details</summary>
  <div style="text-align: center; margin: 20px 0;">
-  <img src="../img/PIR_headline.png" alt="PIR headline figure" style="max-width: 400px; width: 100%; height: auto;">
+  <img src="../img/PIR_headline.png" alt="PIR headline figure" style="max-width: 400px; width: 100%; height: 300px;">
  </div>
 
 	 <ul>    
 		<li><i>Stylized facts on perceived income risks revealed in density surveys in comparison to the estimated income risks used in incomplete market macro models.</i></li> 
-<li><i> An incomplete-market OLG-GE model with heterogeneous income risks calibrated from the survey data. </i></li>
+<li><i> An incomplete-market life-cycle model with subjective/heterogeneous income risks calibrated from the survey data. </i></li>
 <li><i> Heterogeneity in income risks as a new observable factor accounting for wealth inequality.</i></li>
        <li><i> Lower perceived risks in the survey than conventional estimates help account for low-liquid-asset-holdings or hand-to-mouth agents.</i></li>
-       <li><i>A 3-min video presentation <iframe title="vimeo-player" src="https://player.vimeo.com/video/760123801?h=038a6a5c26" width="640" height="400" frameborder="0" allowfullscreen></iframe></i></li>
+       <li><i>A 3-min video presentation of the JMP version <iframe title="vimeo-player" src="https://player.vimeo.com/video/760123801?h=038a6a5c26" width="640" height="400" frameborder="0" allowfullscreen></iframe></i></li>
 </ul> 
 </details>   	
 
