Adjust layout and dimensions in index.html

--- a/research/index.html
+++ b/research/index.html
@@ -17,8 +17,8 @@ title: Research
   <summary>Details</summary>
 <div style="display: flex; align-items: flex-start; gap: 20px; margin: 20px 0;">
 
-  <!-- Left column: bullet text -->
-  <div style="flex: 1;">
+  <!-- Left column: wider text section -->
+  <div style="flex: 2;">
     <ul>
       <li><i>Stylized facts on perceived income risks revealed in density surveys in comparison to the estimated income risks used in incomplete market macro models.</i></li>
       <li><i>An incomplete-market life-cycle model with subjective/heterogeneous income risks calibrated from the survey data.</i></li>
@@ -26,16 +26,16 @@ title: Research
       <li><i>Lower perceived risks in the survey than conventional estimates help account for low-liquid-asset-holdings or hand-to-mouth agents.</i></li>
       <li><i>A 3-min video presentation of the JMP version  
         <iframe title="vimeo-player" src="https://player.vimeo.com/video/760123801?h=038a6a5c26"
-                width="300" height="180" frameborder="0" allowfullscreen></iframe>
+                width="280" height="160" frameborder="0" allowfullscreen></iframe>
       </i></li>
     </ul>
   </div>
 
-  <!-- Right column: image -->
-  <div style="flex: 0 0 auto;">
+  <!-- Right column: smaller image section -->
+  <div style="flex: 1; max-width: 220px;">
     <img src="../img/PIR_headline.png"
          alt="PIR headline figure"
-         style="max-width: 300px; width: 100%; height: 250px;">
+         style="width: 100%; height: auto;">
   </div>
 
 </div>
