--- a/research/index.html
+++ b/research/index.html
@@ -32,7 +32,7 @@ title: Research
   </div>
 
   <!-- Right column: smaller image section -->
-  <div style="flex: 1; max-width: 120px;">
+  <div style="flex: 1; max-width: 40%;">
     <img src="../img/PIR_headline.png"
          alt="PIR headline figure"
          style="width: 100%; height: auto;">
