Add new links to the 'What's new' section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ title: Tao Wang's page
 
 <div class="blurb">
 	<h3 style="color:#CD5C5C"> What's new </h3>
+				<li><a href="https://macroexpectations.com/doc/2025-program-expectations-in-dynamic-models.pdf">Presented at the Expectations in Dynamic Macro Models Workshop 2025</a></li> 
+
 			<li><a href="https://taowangecon.github.io/papers/PIR.pdf">A revised draft on perceived versus calibrated income risks</a></li> 
 			<li><a href="https://www.ifo.de/en/cesifo/event/2025-10-17/15th-ifo-conference-macroeconomics-and-survey-data">Presented at the Ifo Institute </a></li> 
 		<li><a href="https://taowangecon.github.io/papers/PoliticalBelief.pdf">A new draft on partisan divides in MICRO expectations</a></li> 
