--- a/bib/PURML.html
+++ b/bib/PURML.html
@@ -1,6 +1,6 @@
 
 @techreport{du2024pur,
-  title={Perceived Unemployment Risks over Business Cycles},
+  title={Perceived Unemployment Risks over the Business Cycle},
   author={Du, William and Monninger, Adrian and Qiu, Xincheng and Wang, Tao},
   year={2024},
   institution={mimeo}
